[package]
name = "nds"
version = "0.1.0"
authors = ["BlueTheDuck <hello@perezv.ar>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["nds-sys", "nds-proc-macros"]

[dependencies]
nds-sys = { path = "nds-sys" }
nds-proc-macros = { path = "nds-proc-macros", optional = true }
bitflags = "1.3.2"
paste = "1"
lazy_static = { version = "1.4", features = ["spin_no_std"], optional = true }
spin = { version = "0.9", default-features = false, features = [
    "spin_mutex",
], optional = true }
embedded-graphics-core = { version = "0.3.3", optional = true }

[features]
default = [
    "default_panic_screen",
    "nocash_tty",
    "proc_macros",
    "embedded-graphics-core",
]
default_panic_screen = []
nocash_tty = ["spin", "lazy_static"]
proc_macros = ["nds-proc-macros"]
