[package]
name = "nds-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nds-sys = { path = "../nds-sys" }
bitflags = "2.4.1"
paste = "1"
spin = { version = "0.9", default-features = false, features = [
    "spin_mutex",
    "portable_atomic",
], optional = true }
portable-atomic = { version = "1.4.2", default-features = false, features = [
    "unsafe-assume-single-core",
    "require-cas",
], optional = true }
embedded-graphics-core = { version = "0.4.0", optional = true }
once_cell = { version = "1.18.0", default-features = false, optional = true }

[features]
default = [
    "nocash_tty",
    "dep:embedded-graphics-core",
    "dep:spin",
]
default_panic_screen = []
nocash_tty = ["dep:spin", "dep:once_cell", "dep:portable-atomic"]
