[package]
name = "nds-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nds-sys = { path = "../nds-sys" }
bitflags = "2.6"
paste = "1"
spin = { version = "0.9", default-features = false, features = [
    "spin_mutex",
    "portable_atomic",
] }
portable-atomic = { version = "1.7", default-features = false, features = [
    "unsafe-assume-single-core",
    "require-cas",
] }
embedded-graphics-core = { version = "0.4.0", optional = true }
once_cell = { version = "1.19.0", default-features = false, optional = true }

[features]
default = [
    "nocash_tty",
    "dep:embedded-graphics-core"
]
nocash_tty = ["dep:once_cell"]
