[package]
name = "nds-rs"
version = "0.1.0"
edition.workspace = true

[dependencies]
nds-sys = { path = "../nds-sys" }
bitflags = "2.6"
paste = "1"
spin = { version = "0.9", default-features = false, features = [
    "spin_mutex",
    "portable_atomic",
] }
portable-atomic = { version = "1.7", default-features = false, features = [
    "unsafe-assume-single-core",
    "require-cas",
] }
embedded-graphics-core = { version = "0.4.0", optional = true }
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }

[features]
default = ["embedded-graphics-core"]
