[package]
name = "nds-sys"
version = "0.1.0"
authors = ["BlueTheDuck <hello@perezv.ar>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
libc = { version = "0.2.137", features = ["extra_traits", "const-extern-fn"] }

[build-dependencies]
bindgen = "0.69.4"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

