[package]
name = "nds-sys"
version = "0.1.0"
authors = ["BlueTheDuck <hello@perezv.ar>"]
edition.workspace = true
build = "build.rs"

[dependencies]
bitflags = "2.9.0"
libc = { workspace = true }

[build-dependencies]
bindgen.workspace = true
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

